--- a/themes/hueman/source/css/_partial/header.styl
+++ b/themes/hueman/source/css/_partial/header.styl
@@ -20,8 +20,7 @@
     padding: 10px 0px 0px
     margin-left: 20px
   .subtitle
-    font-size: 16px
-    font-style: italic
-    line-height: logo-height + 10
+    font-size: 20px
+    line-height: logo-height + 20
+    letter-spacing: 0.03em
     color: color-nav-foreground
-    text-shadow: 0 1px rgba(0, 0, 0, 0.2)
