--- a/themes/hueman/source/css/_variables.styl
+++ b/themes/hueman/source/css/_variables.styl
@@ -6,7 +6,7 @@ vendor-prefixes = webkit moz ms official
 color-default = #555
 color-link = #800000
 color-grey = #aaa
-color-header-background = #26272b
+color-header-background = black
 color-main-background = #fff
 color-background = #7a201f
 color-mobile-nav-background = #191919
