--- a/themes/hueman/layout/_partial/after-footer.ejs
+++ b/themes/hueman/layout/_partial/after-footer.ejs
@@ -18,9 +18,9 @@
 <% } %>
 
 <% if(theme.use_google_apis) { %>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <% } else { %>
-  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 <% } %>
 
 <% if (theme.fancybox){ %>
